--- a/Sim/Sim.csproj
+++ b/Sim/Sim.csproj
@@ -43,8 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Buildings\Building.cs" />
+    <Compile Include="Buildings\BuildingProperties.cs" />
+    <Compile Include="Buildings\Farm.cs" />
+    <Compile Include="Buildings\House.cs" />
+    <Compile Include="Buildings\LumberMill.cs" />
+    <Compile Include="Buildings\Mine.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="Position.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Town.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
